// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'alert' cva > snap 1`] = `
{
  "base": [
    "alert",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {
    "type": {
      "error": [
        "alert-error",
      ],
      "neutral": [
        "alert-neutral",
      ],
      "primary": [
        "alert-primary",
      ],
      "success": [
        "alert-success",
      ],
      "warning": [
        "alert-warning",
      ],
    },
  },
}
`;

exports[`'avatar' cva > snap 1`] = `
{
  "base": [
    "avatar",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'badge' cva > snap 1`] = `
{
  "base": [
    "badge",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {
    "ghost": {
      "true": [
        "badge-ghost",
      ],
    },
    "outline": {
      "true": [
        "badge-outline",
      ],
    },
    "size": {
      "lg": [
        "badge-lg",
      ],
      "md": [
        "badge-md",
      ],
      "sm": [
        "badge-sm",
      ],
      "xs": [
        "badge-xs",
      ],
    },
    "type": {
      "error": [
        "badge-error",
      ],
      "neutral": [
        "badge-neutral",
      ],
      "primary": [
        "badge-primary",
      ],
      "success": [
        "badge-success",
      ],
      "warning": [
        "badge-warning",
      ],
    },
  },
}
`;

exports[`'bottom-navigation' cva > snap 1`] = `
{
  "base": [
    "btm-nav",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {
    "disabled": {
      "true": [
        "disabled",
      ],
    },
    "size": {
      "lg": [
        "btm-nav-lg",
      ],
      "md": [
        "btm-nav-md",
      ],
      "sm": [
        "btm-nav-sm",
      ],
      "xs": [
        "btm-nav-xs",
      ],
    },
  },
}
`;

exports[`'breadcrumbs' cva > snap 1`] = `
{
  "base": [
    "breadcrumbs",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'button' cva > snap 1`] = `
{
  "base": [
    "btn",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {
    "active": {
      "true": [
        "btn",
      ],
    },
    "disabled": {
      "true": [
        "btn-disabled",
      ],
    },
    "focusVisible": {
      "true": [
        "btn",
      ],
    },
    "ghost": {
      "true": [
        "btn-ghost",
      ],
    },
    "glass": {
      "true": [
        "btn",
      ],
    },
    "hover": {
      "true": [
        "btn",
      ],
    },
    "link": {
      "true": [
        "btn-link",
      ],
    },
    "outline": {
      "true": [
        "btn-outline",
      ],
    },
    "shape": {
      "circle": [
        "btn-circle",
      ],
      "square": [
        "btn-square",
      ],
    },
    "size": {
      "block": [
        "btn-block",
      ],
      "lg": [
        "btn-lg",
      ],
      "md": [
        "btn-md",
      ],
      "sm": [
        "btn-sm",
      ],
      "wide": [
        "btn-wide",
      ],
      "xs": [
        "btn-xs",
      ],
    },
    "type": {
      "error": [
        "btn-error",
      ],
      "neutral": [
        "btn-neutral",
      ],
      "primary": [
        "btn-primary",
      ],
      "success": [
        "btn-success",
      ],
      "warning": [
        "btn-warning",
      ],
    },
  },
}
`;

exports[`'card' cva > snap 1`] = `
{
  "base": [
    "card",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'carousel' cva > snap 1`] = `
{
  "base": [
    "carousel",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'chat' cva > snap 1`] = `
{
  "base": [
    "chat",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'checkbox' cva > snap 1`] = `
{
  "base": [
    "checkbox",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {
    "size": {
      "lg": [
        "checkbox-lg",
      ],
      "md": [
        "checkbox-md",
      ],
      "sm": [
        "checkbox-sm",
      ],
      "xs": [
        "checkbox-xs",
      ],
    },
    "type": {
      "error": [
        "checkbox-error",
      ],
      "neutral": [
        "checkbox-neutral",
      ],
      "primary": [
        "checkbox-primary",
      ],
      "success": [
        "checkbox-success",
      ],
      "warning": [
        "checkbox-warning",
      ],
    },
  },
}
`;

exports[`'collapse' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'countdown' cva > snap 1`] = `
{
  "base": [
    "countdown",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'diff' cva > snap 1`] = `
{
  "base": [
    "diff",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'divider' cva > snap 1`] = `
{
  "base": [
    "divider",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {
    "direction": {
      "horizontal": [
        "divider-horizontal",
      ],
      "vertical": [
        "divider-vertical",
      ],
    },
    "type": {
      "error": [
        "divider-error",
      ],
      "neutral": [
        "divider-neutral",
      ],
      "primary": [
        "divider-primary",
      ],
      "success": [
        "divider-success",
      ],
      "warning": [
        "divider-warning",
      ],
    },
  },
}
`;

exports[`'drawer' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'dropdown' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'file-input' cva > snap 1`] = `
{
  "base": [
    "file-input",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {
    "bordered": {
      "true": [
        "file-input-bordered",
      ],
    },
    "disabled": {
      "true": [
        "file-input-disabled",
      ],
    },
    "ghost": {
      "true": [
        "file-input-ghost",
      ],
    },
    "size": {
      "lg": [
        "file-input-lg",
      ],
      "md": [
        "file-input-md",
      ],
      "sm": [
        "file-input-sm",
      ],
      "xs": [
        "file-input-xs",
      ],
    },
    "type": {
      "error": [
        "file-input-error",
      ],
      "neutral": [
        "file-input-neutral",
      ],
      "primary": [
        "file-input-primary",
      ],
      "success": [
        "file-input-success",
      ],
      "warning": [
        "file-input-warning",
      ],
    },
  },
}
`;

exports[`'footer' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'form' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'hero' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'indicator' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'input' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'join' cva > snap 1`] = `
{
  "base": [
    "join",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {
    "direction": {
      "horizontal": [
        "join-horizontal",
      ],
      "vertical": [
        "join-vertical",
      ],
    },
  },
}
`;

exports[`'kbd' cva > snap 1`] = `
{
  "base": [
    "kbd",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {
    "size": {
      "lg": [
        "kbd-lg",
      ],
      "md": [
        "kbd-md",
      ],
      "sm": [
        "kbd-sm",
      ],
      "xs": [
        "kbd-xs",
      ],
    },
  },
}
`;

exports[`'link' cva > snap 1`] = `
{
  "base": [
    "link",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {
    "hover": {
      "true": [
        "link-hover",
      ],
    },
    "type": {
      "error": [
        "link-error",
      ],
      "neutral": [
        "link-neutral",
      ],
      "primary": [
        "link-primary",
      ],
      "success": [
        "link-success",
      ],
      "warning": [
        "link-warning",
      ],
    },
  },
}
`;

exports[`'loading' cva > snap 1`] = `
{
  "base": [
    "loading",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {
    "shape": {
      "audio": [
        "loading-audio",
      ],
      "ball-triangle": [
        "loading-ball-triangle",
      ],
      "bars": [
        "loading-bars",
      ],
      "circles": [
        "loading-circles",
      ],
      "grid": [
        "loading-grid",
      ],
      "hearts": [
        "loading-hearts",
      ],
      "oval": [
        "loading-oval",
      ],
      "puff": [
        "loading-puff",
      ],
      "rings": [
        "loading-rings",
      ],
      "spinning-circles": [
        "loading-spinning-circles",
      ],
      "tail-spin": [
        "loading-tail-spin",
      ],
      "three-dots": [
        "loading-three-dots",
      ],
    },
    "size": {
      "lg": [
        "loading-lg",
      ],
      "md": [
        "loading-md",
      ],
      "sm": [
        "loading-sm",
      ],
      "xs": [
        "loading-xs",
      ],
    },
  },
}
`;

exports[`'mask' cva > snap 1`] = `
{
  "base": [
    "mask",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {
    "shape": {
      "circle": [
        "mask-circle",
      ],
      "decagon": [
        "mask-decagon",
      ],
      "diamond": [
        "mask-diamond",
      ],
      "heart": [
        "mask-heart",
      ],
      "hexagon": [
        "mask-hexagon",
      ],
      "hexagon-2": [
        "mask-hexagon-2",
      ],
      "parallelogram": [
        "mask-parallelogram",
      ],
      "parallelogram-2": [
        "mask-parallelogram-2",
      ],
      "parallelogram-3": [
        "mask-parallelogram-3",
      ],
      "parallelogram-4": [
        "mask-parallelogram-4",
      ],
      "pentagon": [
        "mask-pentagon",
      ],
      "square": [
        "mask-square",
      ],
      "squircle": [
        "mask-squircle",
      ],
      "star": [
        "mask-star",
      ],
      "star-2": [
        "mask-star-2",
      ],
      "triangle": [
        "mask-triangle",
      ],
      "triangle-2": [
        "mask-triangle-2",
      ],
      "triangle-3": [
        "mask-triangle-3",
      ],
      "triangle-4": [
        "mask-triangle-4",
      ],
    },
  },
}
`;

exports[`'menu' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'navbar' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'progress' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'radial-progress' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'radio' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'range' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'rating' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'select' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'skeleton' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'stack' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'stat' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'steps' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'swap' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'tab' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'table' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {
    "size": {
      "lg": [
        "table-lg",
      ],
      "md": [
        "table-md",
      ],
      "sm": [
        "table-sm",
      ],
      "xs": [
        "table-xs",
      ],
    },
  },
}
`;

exports[`'textarea' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'timeline' cva > snap 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'toast' cva > snap 1`] = `
{
  "base": [
    "toast",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {},
}
`;

exports[`'toggle' cva > snap 1`] = `
{
  "base": [
    "toggle",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {
    "size": {
      "lg": [
        "toggle-lg",
      ],
      "md": [
        "toggle-md",
      ],
      "sm": [
        "toggle-sm",
      ],
      "xs": [
        "toggle-xs",
      ],
    },
    "type": {
      "error": [
        "toggle-error",
      ],
      "neutral": [
        "toggle-neutral",
      ],
      "primary": [
        "toggle-primary",
      ],
      "success": [
        "toggle-success",
      ],
      "warning": [
        "toggle-warning",
      ],
    },
  },
}
`;

exports[`'tooltip' cva > snap 1`] = `
{
  "base": [
    "tooltip",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "variants": {
    "open": {
      "true": [
        "tooltip-open",
      ],
    },
    "placement": {
      "bottom": [
        "tooltip-bottom",
      ],
      "left": [
        "tooltip-left",
      ],
      "right": [
        "tooltip-right",
      ],
      "top": [
        "tooltip-top",
      ],
    },
  },
}
`;
